--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">PhunApp</string>
+    <string name="event_title_text">Event Title</string>
+    <string name="event_location_text">Event Location</string>
+    <string name="event_description_text">Event Description</string>
+    <string name="share_text">Share</string>
+    <string name="event_image_description">Event image</string>
 </resources>
