--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="event_description_text">Event Description</string>
     <string name="share_text">Share</string>
     <string name="event_image_description">Event image</string>
+    <string name="detail_event_date">Event Date</string>
 </resources>
